_sass/_layout.scss
/**
 * Site header
 */
.site-header {
  padding: 1rem 0;
  background: $yellow-color;
  position: relative;
  font-weight: bold;
}


.site-title {
  margin-bottom: 0;
  margin-top: 0;
  float: left;
}

.site-nav {
  float: right;

  .menu-icon {
    display: none;
  }

  @include media-query($on-palm) {
    position: absolute;
    top: 9px;
    right: 30px;
    border: 1px solid $grey-color-light;
    border-radius: 5px;
    text-align: right;

    .menu-icon {
      display: block;
      float: right;
      width: 36px;
      height: 26px;
      line-height: 0;
      padding-top: 10px;
      text-align: center;

      > svg {
        width: 18px;
        height: 15px;

        path {
          fill: $grey-color-dark;
        }
      }
    }

    .trigger {
      clear: both;
      display: none;
    }

    &:hover .trigger {
      display: block;
      padding-bottom: 5px;
    }

    .page-link {
      display: block;
      padding: 5px 10px;
    }
  }
}


.social {
  float: right;

  a {
    margin-right: 1em;
  }
}


.home-row {
  margin: 5rem auto;
}


.site-footer {
  margin-top: 5rem;
}

.post-list {
  margin-left: 0;
  padding-left: 0;
  list-style: none;

  > li {
    margin-bottom: $spacing-unit;
  }

  // a {
  //   font-size: 1.1rem;
  // }
}

.post-meta {
  font-size: $small-font-size;
  color: $grey-color;
}

.post-content {
  position: relative;
}


img.me {
  width: 100px;
  float: right;
  margin-left: 10px;

  -webkit-border-radius: 50%;
  border-radius: 50%;
}

.round {
  border-radius: 50%;
}


.twitter-share-button {
  display: inline-block;
  text-align:center;
  padding: .25rem;
  margin: 1rem auto;
}

#disqus_thread {
  margin-top: 100px;
}


.highlighted-post {
  margin: 4em auto 6em;
  padding-bottom: 3em;
  border-bottom: 5px solid lightgrey;
}

